--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1,26 +1,29 @@
 {
     "worldcasper2": {
+        "Back": "Back",
+        "Newer Posts": "Newer Posts",
+        "of": "of",
+        "Older Posts": "Older Posts",
+        "Page": "Page",
+        "Subscribe": "Subscribe",
+        "Subscribe to": "Subscribe to",
+        "Subscribed!": "Subscribed!",
+        "with the email address": "with the email address",
+        "Your email address": "Your email address",
+        "You've successfully subscribed to": "You've successfully subscribed to",
         "A collection of posts": "A collection of posts",
         "A collection of 1 post": "A collection of 1 post",
         "A collection of % posts": "A collection of % posts",
-        "and thought of you!": "and thought of you!",
         "Get the latest posts delivered right to your inbox": "Get the latest posts delivered right to your inbox",
-        "Hey, saw this on": "Hey, saw this on",
         "Latest Posts": "Latest Posts",
         "No posts": "No posts",
-        "Pin": "Pin",
         "Read More": "Read More",
         "Read <a href='{url}'>more posts</a> by this author": "Read <a href='{url}'>more posts</a> by this author",
-        "Reblog": "Reblog",
         "See all % posts": "See all % posts",
-        "Send": "Send",
-        "Share": "Share",
         "Share this": "Share this",
         "Stay up to date! Get all the latest &amp; greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest &amp; greatest posts delivered straight to your inbox",
         "Subscribe": "Subscribe",
         "Subscribe to": "Subscribe to",
-        "Tweet": "Tweet",
-        "WhatsApp": "WhatsApp",
         "youremail@example.com": "youremail@example.com",
         "1 post": "1 post",
         "% posts": "% posts"
