--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -1,26 +1,29 @@
 {
     "worldcasper2": {
+        "Back": "Volver",
+        "Newer Posts": "Artículos Siguientes",
+        "of": "de",
+        "Older Posts": "Artículos Anteriores",
+        "Page": "Página",
+        "Subscribe": "Suscríbete",
+        "Subscribe to": "Suscríbete a",
+        "Subscribed!": "¡Suscrito!",
+        "with the email address": "con el correo electrónico",
+        "Your email address": "Tu correo electrónico",
+        "You've successfully subscribed to": "Te has suscrito con éxito a",
         "A collection of posts": "Una colección de artículos",
         "A collection of 1 post": "Una colección de 1 artículo",
         "A collection of % posts": "Una colección de % artículos",
-        "and thought of you!": "y pensé en ti!",
         "Get the latest posts delivered right to your inbox": "Recibe los últimos artículos directamente en tu buzón",
-        "Hey, saw this on": "¡Hola, vi esto en",
         "Latest Posts": "Últimos Artículos",
         "No posts": "No hay artículos",
-        "Pin": "Pinea",
         "Read More": "Lee Más",
         "Read <a href='{url}'>more posts</a> by this author": "Lee <a href='{url}'>más artículos</a> de este autor",
-        "Reblog": "Rebloguea",
         "See all % posts": "Ver todos los % artículos",
-        "Send": "Envía",
-        "Share": "Comparte",
         "Share this": "Comparte",
         "Stay up to date! Get all the latest &amp; greatest posts delivered straight to your inbox": "¡Mantente al día! Recibe todos los últimos y mejores artículos directamente en tu buzón",
         "Subscribe": "Suscríbete",
         "Subscribe to": "Suscríbete a",
-        "Tweet": "Tuitea",
-        "WhatsApp": "Wasapea",
         "youremail@example.com": "tucorreo@ejemplo.com",
         "1 post": "1 artículo",
         "% posts": "% artículos"
