--- a/locales/en.json
+++ b/locales/en.json
@@ -22,7 +22,7 @@
             "Read <a href='{url}'>more posts</a> by this author": "Read <a href='{url}'>more posts</a> by this author",
             "See all % posts": "See all % posts",
             "Share this": "Share this",
-            "Stay up to date! Get all the latest &amp; greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest &amp; greatest posts delivered straight to your inbox",
+            "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
             "Subscribe": "Subscribe",
             "Subscribe to": "Subscribe to",
             "youremail@example.com": "youremail@example.com",
