--- a/locales/es.json
+++ b/locales/es.json
@@ -22,7 +22,7 @@
             "Read <a href='{url}'>more posts</a> by this author": "Lee <a href='{url}'>más artículos</a> de este autor",
             "See all % posts": "Ver todos los % artículos",
             "Share this": "Comparte",
-            "Stay up to date! Get all the latest &amp; greatest posts delivered straight to your inbox": "¡Mantente al día! Recibe todos los últimos y mejores artículos directamente en tu buzón",
+            "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "¡Mantente al día! Recibe todos los últimos y mejores artículos directamente en tu buzón",
             "Subscribe": "Suscríbete",
             "Subscribe to": "Suscríbete a",
             "youremail@example.com": "tucorreo@ejemplo.com",
