--- a/locales/en.json
+++ b/locales/en.json
@@ -1,11 +1,10 @@
 {
     "Back": "Back",
     "Newer Posts": "Newer Posts",
-    "of": "of",
     "Older Posts": "Older Posts",
-    "Page": "Page",
+    "Page {page} of {pages}": "Page {page} of {pages}",
     "Subscribe": "Subscribe",
-    "Subscribe to": "Subscribe to",
+    "Subscribe to {blogtitle}": "Subscribe to {blogtitle}",
     "Subscribed!": "Subscribed!",
     "with the email address": "with the email address",
     "Your email address": "Your email address",
@@ -21,8 +20,6 @@
     "See all % posts": "See all % posts",
     "Share this": "Share this",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
-    "Subscribe": "Subscribe",
-    "Subscribe to": "Subscribe to",
     "youremail@example.com": "youremail@example.com",
     "1 post": "1 post",
     "% posts": "% posts"
