--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,26 +1,26 @@
 {
     "Back": "返回",
-    "Newer Posts": "Newer Posts",
-    "Older Posts": "Older Posts",
-    "Page {page} of {pages}": "Page {page} of {pages}",
+    "Newer Posts": "更新的文章",
+    "Older Posts": "更旧的文章",
+    "Page {page} of {pages}": "第{page}页，共{pages}页",
     "Subscribe": "订阅",
     "Subscribe to {blogtitle}": "订阅{blogtitle}",
     "Subscribed!": "已经订阅！",
-    "with the email address": "with the email address",
+    "with the email address": "在此邮箱",
     "Your email address": "你的email地址",
     "You've successfully subscribed to": "你已经成功订阅了",
-    "A collection of posts": "A collection of posts",
-    "A collection of 1 post": "A collection of 1 post",
-    "A collection of % posts": "A collection of % posts",
-    "Get the latest posts delivered right to your inbox": "Get the latest posts delivered right to your inbox",
+    "A collection of posts": "文章集合",
+    "A collection of 1 post": "共1篇文章",
+    "A collection of % posts": "共%篇文章",
+    "Get the latest posts delivered right to your inbox": "最新文章直达邮箱",
     "Latest Posts": "最新文章",
     "No posts": "没有文章",
     "Read More": "阅读更多",
-    "Read <a href='{url}'>more posts</a> by this author": "Read <a href='{url}'>more posts</a> by this author",
-    "See all % posts": "See all % posts",
-    "Share this": "Share this",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
+    "Read <a href='{url}'>more posts</a> by this author": "阅读此作者的<a href='{url}'>更多文章</a>",
+    "See all % posts": "查看所有%篇文章",
+    "Share this": "分享",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "保持更新！所有最新最好的文章全部送进你的邮箱",
     "youremail@example.com": "youremail@example.com",
-    "1 post": "1 post",
-    "% posts": "% posts"
+    "1 post": "1 篇文章",
+    "% posts": "% 篇文章"
 }
