[i18n] Meta title: Translatable pagination
no issue

- Updated to use the new {{meta_title page=(t " (Page %)")}}

--- a/locales/en.json
+++ b/locales/en.json
@@ -15,6 +15,7 @@
     "Get the latest posts delivered right to your inbox": "Get the latest posts delivered right to your inbox",
     "Latest Posts": "Latest Posts",
     "No posts": "No posts",
+    " (Page %)": " (Page %)",
     "Read More": "Read More",
     "Read <a href='{url}'>more posts</a> by this author": "Read <a href='{url}'>more posts</a> by this author",
     "See all % posts": "See all % posts",
