--- a/locales/es.json
+++ b/locales/es.json
@@ -15,6 +15,7 @@
     "Get the latest posts delivered right to your inbox": "Recibe los últimos artículos directamente en tu buzón",
     "Latest Posts": "Últimos Artículos",
     "No posts": "No hay artículos",
+    " (Page %)": " (Página %)",
     "Read More": "Lee Más",
     "Read <a href='{url}'>more posts</a> by this author": "Lee <a href='{url}'>más artículos</a> de este autor",
     "See all % posts": "Ver todos los % artículos",
