--- a/locales/zh.json
+++ b/locales/zh.json
@@ -15,6 +15,7 @@
     "Get the latest posts delivered right to your inbox": "最新文章直达邮箱",
     "Latest Posts": "最新文章",
     "No posts": "没有文章",
+    " (Page %)": " (第%页)",
     "Read More": "阅读更多",
     "Read <a href='{url}'>more posts</a> by this author": "阅读此作者的<a href='{url}'>更多文章</a>",
     "See all % posts": "查看所有%篇文章",
