--- a/locales/de.json
+++ b/locales/de.json
@@ -15,6 +15,7 @@
     "Get the latest posts delivered right to your inbox": "Erhalte die neusten Artikel direkt in deine Mailbox",
     "Latest Posts": "Neuster Artikel",
     "No posts": "Keine Artikel",
+    " (Page %)": " (Seite %)",
     "Read More": "Weiterlesen",
     "Read <a href='{url}'>more posts</a> by this author": "Lese <a href='{url}'>mehr Artikel</a> von diesem Autor",
     "See all % posts": "Zeige alle % Artikel",
