--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,29 +1,27 @@
 {
     "Back": "Retour",
     "Newer Posts": "Articles plus récents",
-    "of": "sur",
     "Older Posts": "Articles plus anciens",
-    "Page": "Page",
+    "Page {page} of {pages}": "Page {page} sur {pages}",
     "Subscribe": "S'abonner",
-    "Subscribe to": "S'abonner à",
+    "Subscribe to {blogtitle}": "S’abonner à {blogtitle}",
     "Subscribed!": "Abonné !",
-    "with the email address": "avec l'adresse email",
-    "Your email address": "Votre adresse email",
+    "with the email address": "avec l'adresse e-mail",
+    "Your email address": "Votre adresse e-mail",
     "You've successfully subscribed to": "Vous vous êtes abonné avec succès à",
     "A collection of posts": "Une catégorie d'articles",
     "A collection of 1 post": "Une catégorie avec un article",
     "A collection of % posts": "Une catégorie avec % articles",
-    "Get the latest posts delivered right to your inbox": "Recevez les articles récents directement dans votre boîte de réception",
-    "Latest Posts": "Articles récents",
+    "Get the latest posts delivered right to your inbox": "Recevez les derniers articles directement dans votre boîte de réception.",
+    "Latest Posts": "Derniers articles",
     "No posts": "Aucun article",
+    " (Page %)": " (Page %)",
     "Read More": "En savoir plus",
-    "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus d'articles</a> de cet auteur",
-    "See all % posts": "Voir ces % articles",
+    "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus de messages</a> par cet auteur",
+    "See all % posts": "Voir ces % messages",
     "Share this": "Partager",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Soyez au goût du jour ! Recevez tous les articles récents et sympas directement dans votre boîte de réception",
-    "Subscribe": "S'abonner",
-    "Subscribe to": "S'abonner à",
-    "youremail@example.com": "votreemail@example.fr",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte de réception.",
+    "youremail@example.com": "votreemail@exemple.fr",
     "1 post": "Un article",
     "% posts": "% articles"
 }
