[i18n] Minor adjustments to the French translation file

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -17,8 +17,8 @@
     "No posts": "Aucun article",
     " (Page %)": " (Page %)",
     "Read More": "En savoir plus",
-    "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus de messages</a> par cet auteur",
-    "See all % posts": "Voir ces % messages",
+    "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus de articles</a> de cet auteur",
+    "See all % posts": "Voir ces % articles",
     "Share this": "Partager",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte de réception.",
     "youremail@example.com": "votreemail@exemple.fr",
