--- a/locales/fr.json
+++ b/locales/fr.json
@@ -12,15 +12,15 @@
     "A collection of posts": "Une catégorie d'articles",
     "A collection of 1 post": "Une catégorie avec un article",
     "A collection of % posts": "Une catégorie avec % articles",
-    "Get the latest posts delivered right to your inbox": "Recevez les derniers articles directement dans votre boîte de réception.",
+    "Get the latest posts delivered right to your inbox": "Recevez les derniers articles directement dans votre boîte aux lettres.",
     "Latest Posts": "Derniers articles",
     "No posts": "Aucun article",
     " (Page %)": " (Page %)",
     "Read More": "En savoir plus",
-    "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus de articles</a> de cet auteur",
-    "See all % posts": "Voir ces % articles",
+    "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus d'articles</a> de cet auteur",
+    "See all % posts": "Voir les % articles",
     "Share this": "Partager",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte de réception.",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte aux lettres.",
     "youremail@example.com": "votreemail@exemple.fr",
     "1 post": "Un article",
     "% posts": "% articles"
