--- a/locales/de.json
+++ b/locales/de.json
@@ -14,6 +14,7 @@
     "A collection of % posts": "Eine Sammlung von % Artikel",
     "Get the latest posts delivered right to your inbox": "Erhalte die neusten Artikel direkt in deine Mailbox",
     "Latest Posts": "Neuster Artikel",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
     "No posts": "Keine Artikel",
     " (Page %)": " (Seite %)",
     "Read More": "Weiterlesen",
@@ -21,6 +22,7 @@
     "See all % posts": "Zeige alle % Artikel",
     "Share this": "Teile dies",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Bleibe auf dem Laufenden! Erhalte alle neuen Artikel direkt in deine Mailbox geliefert",
+    "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "deine@emailadresse.de",
     "1 post": "1 Artikel",
     "% posts": "% Artikel"
