--- a/locales/en.json
+++ b/locales/en.json
@@ -14,6 +14,7 @@
     "A collection of % posts": "A collection of % posts",
     "Get the latest posts delivered right to your inbox": "Get the latest posts delivered right to your inbox",
     "Latest Posts": "Latest Posts",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
     "No posts": "No posts",
     " (Page %)": " (Page %)",
     "Read More": "Read More",
@@ -21,6 +22,7 @@
     "See all % posts": "See all % posts",
     "Share this": "Share this",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
+    "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "youremail@example.com",
     "1 post": "1 post",
     "% posts": "% posts"
