--- a/locales/es.json
+++ b/locales/es.json
@@ -14,6 +14,7 @@
     "A collection of % posts": "Una colección de % artículos",
     "Get the latest posts delivered right to your inbox": "Recibe los últimos artículos directamente en tu buzón",
     "Latest Posts": "Últimos Artículos",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Más artículos</a> de {name}",
     "No posts": "No hay artículos",
     " (Page %)": " (Página %)",
     "Read More": "Lee Más",
@@ -21,6 +22,7 @@
     "See all % posts": "Ver todos los % artículos",
     "Share this": "Comparte",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "¡Mantente al día! Recibe todos los últimos y mejores artículos directamente en tu buzón",
+    "This post was a collaboration between": "Este artículo fue una colaboración entre",
     "youremail@example.com": "tucorreo@ejemplo.com",
     "1 post": "1 artículo",
     "% posts": "% artículos"
