--- a/locales/fr.json
+++ b/locales/fr.json
@@ -14,6 +14,7 @@
     "A collection of % posts": "Une catégorie avec % articles",
     "Get the latest posts delivered right to your inbox": "Recevez les derniers articles directement dans votre boîte aux lettres.",
     "Latest Posts": "Derniers articles",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
     "No posts": "Aucun article",
     " (Page %)": " (Page %)",
     "Read More": "En savoir plus",
@@ -21,6 +22,7 @@
     "See all % posts": "Voir les % articles",
     "Share this": "Partager",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte aux lettres.",
+    "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "votreemail@exemple.fr",
     "1 post": "Un article",
     "% posts": "% articles"
