--- a/locales/ro.json
+++ b/locales/ro.json
@@ -14,6 +14,7 @@
     "A collection of % posts": "O colecție de % articole",
     "Get the latest posts delivered right to your inbox": "Citește ultimele articole livrate direct în inbox-ul tău",
     "Latest Posts": "Ultimele Articole",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
     "No posts": "Nu există articole",
     " (Page %)": " (Pagina %)",
     "Read More": "Citește mai mult",
@@ -21,6 +22,7 @@
     "See all % posts": "Vezi toate % articolele",
     "Share this": "Partajează asta",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Rămâi conectat! Citește ultimele și cele mai interesante articole livrate direct în inbox-ul tău",
+    "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "youremail@example.com",
     "1 post": "1 articol",
     "% posts": "% articole"
