--- a/locales/en.json
+++ b/locales/en.json
@@ -26,4 +26,7 @@
     "youremail@example.com": "youremail@example.com",
     "1 post": "1 post",
     "% posts": "% posts"
+    "< 1 min read": "< 1 min read",
+    "1 min read": "1 min read",
+    "% min read": "% min read",
 }
