--- a/locales/en.json
+++ b/locales/en.json
@@ -25,8 +25,7 @@
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "youremail@example.com",
     "1 post": "1 post",
-    "% posts": "% posts"
-    "< 1 min read": "< 1 min read",
+    "% posts": "% posts",
     "1 min read": "1 min read",
-    "% min read": "% min read",
+    "% min read": "% min read"
 }
