[i18n] Translation files updated for reading time

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -25,5 +25,7 @@
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "votreemail@exemple.fr",
     "1 post": "Un article",
-    "% posts": "% articles"
+    "% posts": "% articles",
+    "1 min read": "1 min read",
+    "% min read": "% min read"
 }
