--- a/locales/de.json
+++ b/locales/de.json
@@ -25,5 +25,7 @@
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "deine@emailadresse.de",
     "1 post": "1 Artikel",
-    "% posts": "% Artikel"
+    "% posts": "% Artikel",
+    "1 min read": "1 min read",
+    "% min read": "% min read"
 }
