--- a/locales/es.json
+++ b/locales/es.json
@@ -25,5 +25,7 @@
     "This post was a collaboration between": "Este artículo fue una colaboración entre",
     "youremail@example.com": "tucorreo@ejemplo.com",
     "1 post": "1 artículo",
-    "% posts": "% artículos"
+    "% posts": "% artículos",
+    "1 min read": "1 min de lectura",
+    "% min read": "% min de lectura"
 }
