--- a/locales/fi.json
+++ b/locales/fi.json
@@ -25,5 +25,7 @@
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "sinun.osoitteesi@esimerkki.fi",
     "1 post": "Yksi artikkeli",
-    "% posts": "% artikkelia"
+    "% posts": "% artikkelia",
+    "1 min read": "1 min read",
+    "% min read": "% min read"
 }
