--- a/locales/ro.json
+++ b/locales/ro.json
@@ -25,5 +25,7 @@
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "youremail@example.com",
     "1 post": "1 articol",
-    "% posts": "% articole"
+    "% posts": "% articole",
+    "1 min read": "1 min read",
+    "% min read": "% min read"
 }
