--- a/locales/sv.json
+++ b/locales/sv.json
@@ -25,5 +25,7 @@
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "dinemail@exempel.se",
     "1 post": "1 artikel",
-    "% posts": "% artiklar"
+    "% posts": "% artiklar",
+    "1 min read": "1 min read",
+    "% min read": "% min read"
 }
