--- a/locales/zh.json
+++ b/locales/zh.json
@@ -25,5 +25,7 @@
     "This post was a collaboration between": "This post was a collaboration between",
     "youremail@example.com": "youremail@example.com",
     "1 post": "1 篇文章",
-    "% posts": "% 篇文章"
+    "% posts": "% 篇文章",
+    "1 min read": "1 min read",
+    "% min read": "% min read"
 }
