--- a/locales/fi.json
+++ b/locales/fi.json
@@ -14,6 +14,7 @@
     "A collection of % posts": "Kokoelmassa % artikkelia",
     "Get the latest posts delivered right to your inbox": "Tilaa uusimmat artikkelit suoraan sähköpostiisi",
     "Latest Posts": "Uusimmat artikkelit",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Muita artikkeleja </a> kirjoittajalta {name}",
     "No posts": "Ei artikkeleita",
     " (Page %)": " (Sivu %)",
     "Read More": "Lue lisää",
@@ -21,7 +22,10 @@
     "See all % posts": "Näytä kaikki % artikkelia",
     "Share this": "Jaa tämä",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Pysy ajan tasalla! Tilaa uudet artikkelit sähköpostiisi",
+    "This post was a collaboration between": "Tässä artikkelissa olivat yhteistyössä",
     "youremail@example.com": "sinun.osoitteesi@esimerkki.fi",
     "1 post": "Yksi artikkeli",
-    "% posts": "% artikkelia"
+    "% posts": "% artikkelia",
+    "1 min read": "Lukuaika 1 minuutti",
+    "% min read": "Lukuaika % miinuuttia"
 }
