Fixed a typo in Finnish translation
Typing error corrected locales/fi.json

--- a/locales/fi.json
+++ b/locales/fi.json
@@ -27,5 +27,5 @@
     "1 post": "Yksi artikkeli",
     "% posts": "% artikkelia",
     "1 min read": "Lukuaika 1 minuutti",
-    "% min read": "Lukuaika % miinuuttia"
+    "% min read": "Lukuaika % minuuttia"
 }
