--- a/locales/fi.json
+++ b/locales/fi.json
@@ -23,7 +23,7 @@
     "Share this": "Jaa tämä",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Pysy ajan tasalla! Tilaa uudet artikkelit sähköpostiisi",
     "This post was a collaboration between": "Tässä artikkelissa olivat yhteistyössä",
-    "youremail@example.com": "sinun.osoitteesi@esimerkki.fi",
+    "youremail@example.com": "osoitteesi@esimerkki.fi",
     "1 post": "Yksi artikkeli",
     "% posts": "% artikkelia",
     "1 min read": "Lukuaika 1 minuutti",
