--- a/locales/ro.json
+++ b/locales/ro.json
@@ -14,7 +14,7 @@
     "A collection of % posts": "O colecție de % articole",
     "Get the latest posts delivered right to your inbox": "Citește ultimele articole livrate direct în inbox-ul tău",
     "Latest Posts": "Ultimele Articole",
-    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Mai multe articole</a> de {name}",
     "No posts": "Nu există articole",
     " (Page %)": " (Pagina %)",
     "Read More": "Citește mai mult",
@@ -22,10 +22,10 @@
     "See all % posts": "Vezi toate % articolele",
     "Share this": "Partajează asta",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Rămâi conectat! Citește ultimele și cele mai interesante articole livrate direct în inbox-ul tău",
-    "This post was a collaboration between": "This post was a collaboration between",
-    "youremail@example.com": "youremail@example.com",
+    "This post was a collaboration between": "Acest articol a fost o colaborare între",
+    "youremail@example.com": "email@domeniu.com",
     "1 post": "1 articol",
     "% posts": "% articole",
-    "1 min read": "1 min read",
-    "% min read": "% min read"
+    "1 min read": "lectură de 1 min",
+    "% min read": "lectură de % min"
 }
