--- a/locales/lt.json
+++ b/locales/lt.json
@@ -4,28 +4,28 @@
     "Older Posts": "Senesni",
     "Page {page} of {pages}": "Puslapis {page} iš {pages}",
     "Subscribe": "Prenumeruoti",
-    "Subscribe to {blogtitle}": "Subscribe to {blogtitle}",
-    "Subscribed!": "Subscribed!",
-    "with the email address": "with the email address",
-    "Your email address": "Your email address",
-    "You've successfully subscribed to": "You've successfully subscribed to",
+    "Subscribe to {blogtitle}": "Prenumeruoti {blogtitle}",
+    "Subscribed!": "Sėkminga prenumeracija!",
+    "with the email address": "su el. pašto adresu",
+    "Your email address": "Jūsų el. paštas",
+    "You've successfully subscribed to": "Jūs sėkmingai užsiprenumeravote",
     "A collection of posts": "A collection of posts",
     "A collection of 1 post": "A collection of 1 post",
     "A collection of % posts": "A collection of % posts",
-    "Get the latest posts delivered right to your inbox": "Get the latest posts delivered right to your inbox",
-    "Latest Posts": "Latest Posts",
-    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
-    "No posts": "No posts",
-    " (Page %)": " (Page %)",
-    "Read More": "Read More",
+    "Get the latest posts delivered right to your inbox": "Gaukite naujienas į savo pašto dėžutę",
+    "Latest Posts": "Paskutiniai įrašai",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Daugiau įrašų</a> by {name}",
+    "No posts": "Nėra įrašų",
+    " (Page %)": " (Puslapis %)",
+    "Read More": "Skaityti toliau",
     "Read <a href='{url}'>more posts</a> by this author": "Read <a href='{url}'>more posts</a> by this author",
-    "See all % posts": "See all % posts",
-    "Share this": "Share this",
+    "See all % posts": "Rodyti visus % įrašus",
+    "Share this": "Pasidalinti šiuo įrašu",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
     "This post was a collaboration between": "This post was a collaboration between",
-    "youremail@example.com": "youremail@example.com",
-    "1 post": "1 post",
-    "% posts": "% posts",
-    "1 min read": "1 min read",
-    "% min read": "% min read"
+    "youremail@example.com": "jusu@pastas.com",
+    "1 post": "1 įrašas",
+    "% posts": "% įrašų",
+    "1 min read": "1 min skaitymo",
+    "% min read": "% min skaitymo"
 }
