--- a/locales/lt.json
+++ b/locales/lt.json
@@ -18,11 +18,11 @@
     "No posts": "Nėra įrašų",
     " (Page %)": " (Puslapis %)",
     "Read More": "Skaityti toliau",
-    "Read <a href='{url}'>more posts</a> by this author": "Read <a href='{url}'>more posts</a> by this author",
+    "Read <a href='{url}'>more posts</a> by this author": "Kiti šio autoriaus  <a href='{url}'>įrašai</a>",
     "See all % posts": "Rodyti visus % įrašus",
     "Share this": "Pasidalinti šiuo įrašu",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
-    "This post was a collaboration between": "This post was a collaboration between",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Sužinok pirmas! Gauk naujausius & paskutiniausius įrašus tiesiai į pašto dėžutę",
+    "This post was a collaboration between": "Šis įrašas sukurtas bendradarbiaujant",
     "youremail@example.com": "jusu@pastas.com",
     "1 post": "1 įrašas",
     "% posts": "% įrašų",
