--- a/locales/de.json
+++ b/locales/de.json
@@ -22,10 +22,10 @@
     "See all % posts": "Zeige alle % Artikel",
     "Share this": "Teile dies",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Bleibe auf dem Laufenden! Erhalte alle neuen Artikel direkt in deine Mailbox geliefert",
-    "This post was a collaboration between": "This post was a collaboration between",
+    "This post was a collaboration between": "Dieser Artikel war eine Zusammenarbeit zwischen",
     "youremail@example.com": "deine@emailadresse.de",
     "1 post": "1 Artikel",
     "% posts": "% Artikel",
-    "1 min read": "1 min read",
-    "% min read": "% min read"
+    "1 min read": "Lesezeit: 1 Min.",
+    "% min read": "Lesezeit: % Min."
 }
