--- a/locales/pl.json
+++ b/locales/pl.json
@@ -14,7 +14,7 @@
     "A collection of % posts": "Kolekcja % wpisów",
     "Get the latest posts delivered right to your inbox": "Otrzymuj najnowsze wpisy na skrzynkę pocztową",
     "Latest Posts": "Najnowsze wpisy",
-    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Więcej wpisów</a> by {name}",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Więcej wpisów</a> {name}",
     "No posts": "Brak wpisów",
     " (Page %)": " (Strona %)",
     "Read More": "Czytaj dalej",
