--- a/locales/sv.json
+++ b/locales/sv.json
@@ -12,7 +12,7 @@
     "A collection of posts": "En samling artiklar",
     "A collection of 1 post": "En samling av 1 artikel",
     "A collection of % posts": "En samling av % artiklar",
-    "Get the latest posts delivered right to your inbox": "Få de senaste artiklarna levereras direkt till din inkorg",
+    "Get the latest posts delivered right to your inbox": "Få de senaste artiklarna levererade direkt till din inkorg",
     "Latest Posts": "Senaste artiklarna",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Fler artiklar</a> av {name}",
     "No posts": "Inga artiklar",
@@ -21,11 +21,11 @@
     "Read <a href='{url}'>more posts</a> by this author": "Läs <a href='{url}'>mer artiklar</a> av denna författare",
     "See all % posts": "Se alla % artiklar",
     "Share this": "Dela detta",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Håll dig uppdaterad! Få alla de senaste och bästa artiklarna levereras direkt till din inkorg.",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Håll dig uppdaterad! Få alla de senaste och bästa artiklarna levererade direkt till din inkorg.",
     "This post was a collaboration between": "Denna artikel var ett samarbete mellan",
     "youremail@example.com": "dinemail@exempel.se",
     "1 post": "1 artikel",
     "% posts": "% artiklar",
-    "1 min read": "1 minut läsning",
+    "1 min read": "1 minuts läsning",
     "% min read": "% minuters läsning"
 }
