[i18n] Brazilian Portuguese corrections
Corrections by lucasfrib, and renaming translation file from pt_br.json
to pt-BR.json according to RFC 5646

--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -17,11 +17,11 @@
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Mais artigos</a> de {name}",
     "No posts": "Não existem artigos",
     " (Page %)": " (Página %)",
-    "Read More": "Lei mais",
+    "Read More": "Leia mais",
     "Read <a href='{url}'>more posts</a> by this author": "Leia <a href='{url}'>mais artigos</a> deste autor",
     "See all % posts": "Ver todos os % artigos",
     "Share this": "Compartilhar",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Atualize-se! Receba as últimas novoidades e artigos diretamente em sua caixa de entrada.",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Atualize-se! Receba as últimas novidades e artigos diretamente em sua caixa de entrada.",
     "This post was a collaboration between": "Este artigo foi uma colaboração entre",
     "youremail@example.com": "seuemail@provedor.com.br",
     "1 post": "1 artigo",
