ru locale tweaks

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,7 +1,7 @@
 {
     "Back": "Назад",
     "Newer Posts": "Назад",
-    "Older Posts": "Еще",
+    "Older Posts": "Ещё",
     "Page {page} of {pages}": "Страница {page} из {pages}",
     "Subscribe": "Подписаться",
     "Subscribe to {blogtitle}": "Подписаться на {blogtitle}",
@@ -14,13 +14,13 @@
     "A collection of % posts": "Коллекция из % статей",
     "Get the latest posts delivered right to your inbox": "Получайте свежие статьи прямо на свою почту",
     "Latest Posts": "Последние статьи",
-    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Еще статьи</a> от {name}",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Другие статьи</a> от {name}",
     "No posts": "Статьи отсутствуют",
     " (Page %)": " (Страница %)",
-    "Read More": "Еще статьи этого автора",
-    "Read <a href='{url}'>more posts</a> by this author": "<a href='{url}'>Еще статьи</a> этого автора",
+    "Read More": "Другие статьи этого автора",
+    "Read <a href='{url}'>more posts</a> by this author": "<a href='{url}'>Другие статьи</a> этого автора",
     "See all % posts": "Посмотреть все % статьи(-ей)",
-    "Share this": "Поделиться статьей",
+    "Share this": "Поделиться статьёй",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Будьте в курсе! Получайте свежие статьи прямо на свою почту",
     "This post was a collaboration between": "Над этой статьей работали",
     "youremail@example.com": "youremail@example.com",
