--- a/locales/fr.json
+++ b/locales/fr.json
@@ -6,23 +6,23 @@
     "Subscribe": "S'abonner",
     "Subscribe to {blogtitle}": "S’abonner à {blogtitle}",
     "Subscribed!": "Abonné !",
-    "with the email address": "avec l'adresse e-mail",
+    "with the email address": "avec l’adresse e-mail",
     "Your email address": "Votre adresse e-mail",
     "You've successfully subscribed to": "Vous vous êtes abonné avec succès à",
-    "A collection of posts": "Une catégorie d'articles",
+    "A collection of posts": "Une catégorie d’articles",
     "A collection of 1 post": "Une catégorie avec un article",
     "A collection of % posts": "Une catégorie avec % articles",
     "Get the latest posts delivered right to your inbox": "Recevez les derniers articles directement dans votre boîte aux lettres.",
     "Latest Posts": "Derniers articles",
-    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Plus d'articles</a> par {name}",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Plus d’articles</a> par {name}",
     "No posts": "Aucun article",
     " (Page %)": " (Page %)",
     "Read More": "En savoir plus",
-    "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus d'articles</a> de cet auteur",
+    "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus d’articles</a> de cet auteur",
     "See all % posts": "Voir les % articles",
     "Share this": "Partager",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte aux lettres.",
-    "This post was a collaboration between": "Cet article est le fruit d'une collaboration entre",
+    "This post was a collaboration between": "Cet article est le fruit d’une collaboration entre",
     "youremail@example.com": "votreemail@exemple.fr",
     "1 post": "Un article",
     "% posts": "% articles",
