--- a/locales/en.json
+++ b/locales/en.json
@@ -27,5 +27,8 @@
     "1 post": "1 post",
     "% posts": "% posts",
     "1 min read": "1 min read",
-    "% min read": "% min read"
+    "% min read": "% min read",
+    "Go to the front page":"Go to the front page",
+    "Ref:":"Ref:",
+    "Message:":"Message:"
 }
