[i18n] Updated all translations: New strings, apostrophes...

--- a/locales/de.json
+++ b/locales/de.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Abonniert!",
     "with the email address": "mit der E-Mail-Adresse",
     "Your email address": "Deine E-Mail-Adresse",
-    "You've successfully subscribed to": "Du wurdest erfolgreich angemeldet für",
+    "You’ve successfully subscribed to": "Du wurdest erfolgreich angemeldet für",
     "A collection of posts": "Eine Sammlung von Artikeln",
     "A collection of 1 post": "Eine Sammlung von einem Artikel",
     "A collection of % posts": "Eine Sammlung von % Artikel",
     "Get the latest posts delivered right to your inbox": "Erhalte die neusten Artikel direkt in deine Mailbox",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Neuster Artikel",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
     "No posts": "Keine Artikel",
     " (Page %)": " (Seite %)",
     "Read More": "Weiterlesen",
     "Read <a href='{url}'>more posts</a> by this author": "Lese <a href='{url}'>mehr Artikel</a> von diesem Autor",
+    "Ref:": "Ref:",
     "See all % posts": "Zeige alle % Artikel",
     "Share this": "Teile dies",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Bleibe auf dem Laufenden! Erhalte alle neuen Artikel direkt in deine Mailbox geliefert",
