--- a/locales/it.json
+++ b/locales/it.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Iscritto!",
     "with the email address": "con l'indirizzo email",
     "Your email address": "Il tuo indirizzo email",
-    "You've successfully subscribed to": "Ti sei iscritto a",
+    "You’ve successfully subscribed to": "Ti sei iscritto a",
     "A collection of posts": "Una collezione di articoli",
     "A collection of 1 post": "Una collezione di 1 articolo",
     "A collection of % posts": "Una collezione di % articoli",
     "Get the latest posts delivered right to your inbox": "Ricevi gli articoli più recenti direttamente nella tua casella di posta",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Ultimi articoli",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Altri articoli</a> da {name}",
     "No posts": "Nessun articolo",
     " (Page %)": " (Pagina %)",
     "Read More": "Leggi di più",
     "Read <a href='{url}'>more posts</a> by this author": "Leggi <a href='{url}'>più post</a> da questo autore",
+    "Ref:": "Ref:",
     "See all % posts": "Mostra tutti i % articoli",
     "Share this": "Condividi",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Resta aggiornato! Ricevi tutti gli articoli più recenti e importanti direttamente nella tua casella di posta",
