--- a/locales/en.json
+++ b/locales/en.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Subscribed!",
     "with the email address": "with the email address",
     "Your email address": "Your email address",
-    "You've successfully subscribed to": "You've successfully subscribed to",
+    "You’ve successfully subscribed to": "You've successfully subscribed to",
     "A collection of posts": "A collection of posts",
     "A collection of 1 post": "A collection of 1 post",
     "A collection of % posts": "A collection of % posts",
     "Get the latest posts delivered right to your inbox": "Get the latest posts delivered right to your inbox",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Latest Posts",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
     "No posts": "No posts",
     " (Page %)": " (Page %)",
     "Read More": "Read More",
     "Read <a href='{url}'>more posts</a> by this author": "Read <a href='{url}'>more posts</a> by this author",
+    "Ref:": "Ref:",
     "See all % posts": "See all % posts",
     "Share this": "Share this",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
@@ -27,8 +30,5 @@
     "1 post": "1 post",
     "% posts": "% posts",
     "1 min read": "1 min read",
-    "% min read": "% min read",
-    "Go to the front page":"Go to the front page",
-    "Ref:":"Ref:",
-    "Message:":"Message:"
+    "% min read": "% min read"
 }
