--- a/locales/es.json
+++ b/locales/es.json
@@ -8,17 +8,20 @@
     "Subscribed!": "¡Suscrito!",
     "with the email address": "con el correo electrónico",
     "Your email address": "Tu correo electrónico",
-    "You've successfully subscribed to": "Te has suscrito con éxito a",
+    "You’ve successfully subscribed to": "Te has suscrito con éxito a",
     "A collection of posts": "Una colección de artículos",
     "A collection of 1 post": "Una colección de 1 artículo",
     "A collection of % posts": "Una colección de % artículos",
     "Get the latest posts delivered right to your inbox": "Recibe los últimos artículos directamente en tu buzón",
+    "Go to the front page": "Ir a la página de inicio",
     "Latest Posts": "Últimos Artículos",
+    "Message:": "Mensaje:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Más artículos</a> de {name}",
     "No posts": "No hay artículos",
     " (Page %)": " (Página %)",
     "Read More": "Lee Más",
     "Read <a href='{url}'>more posts</a> by this author": "Lee <a href='{url}'>más artículos</a> de este autor",
+    "Ref:": "Ref:",
     "See all % posts": "Ver todos los % artículos",
     "Share this": "Comparte",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "¡Mantente al día! Recibe todos los últimos y mejores artículos directamente en tu buzón",
