--- a/locales/fr-CA.json
+++ b/locales/fr-CA.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Abonné !",
     "with the email address": "avec l’adresse courriel",
     "Your email address": "Votre adresse courriel",
-    "You've successfully subscribed to": "Vous vous êtes abonné avec succès à",
+    "You’ve successfully subscribed to": "Vous vous êtes abonné avec succès à",
     "A collection of posts": "Une catégorie d’articles",
     "A collection of 1 post": "Une catégorie avec un article",
     "A collection of % posts": "Une catégorie avec % articles",
     "Get the latest posts delivered right to your inbox": "Recevez les derniers articles directement par courriel.",
+    "Go to the front page": "Aller sur la page d’accueil",
     "Latest Posts": "Derniers articles",
+    "Message:": "Message :",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Plus d’articles</a> par {name}",
     "No posts": "Aucun article",
     " (Page %)": " (Page %)",
     "Read More": "En savoir plus",
     "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus d’articles</a> de cet auteur",
+    "Ref:": "Réf. :",
     "See all % posts": "Voir les % articles",
     "Share this": "Partager",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre courriel.",
