--- a/locales/fr.json
+++ b/locales/fr.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Abonné !",
     "with the email address": "avec l’adresse e-mail",
     "Your email address": "Votre adresse e-mail",
-    "You've successfully subscribed to": "Vous vous êtes abonné avec succès à",
+    "You’ve successfully subscribed to": "Vous vous êtes abonné avec succès à",
     "A collection of posts": "Une catégorie d’articles",
     "A collection of 1 post": "Une catégorie avec un article",
     "A collection of % posts": "Une catégorie avec % articles",
     "Get the latest posts delivered right to your inbox": "Recevez les derniers articles directement dans votre boîte aux lettres.",
+    "Go to the front page": "Aller sur la page d’accueil",
     "Latest Posts": "Derniers articles",
+    "Message:": "Message :",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Plus d’articles</a> par {name}",
     "No posts": "Aucun article",
     " (Page %)": " (Page %)",
     "Read More": "En savoir plus",
     "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus d’articles</a> de cet auteur",
+    "Ref:": "Réf. :",
     "See all % posts": "Voir les % articles",
     "Share this": "Partager",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte aux lettres.",
@@ -27,8 +30,5 @@
     "1 post": "Un article",
     "% posts": "% articles",
     "1 min read": "1 min de lecture",
-    "% min read": "% min de lecture",
-    "Go to the front page":"Aller sur la page d’accueil",
-    "Ref:":"Réf. :",
-    "Message:":"Message :"
+    "% min read": "% min de lecture"
 }
