--- a/locales/hr.json
+++ b/locales/hr.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Pretplaćen!",
     "with the email address": "sa email adresom",
     "Your email address": "Tvoja email adresa",
-    "You've successfully subscribed to": "Uspješno si se pretplatio na",
+    "You’ve successfully subscribed to": "Uspješno si se pretplatio na",
     "A collection of posts": "Kolekcija postova",
     "A collection of 1 post": "Kolekcija s jednim postom",
     "A collection of % posts": "Kolekcija sa % postova",
     "Get the latest posts delivered right to your inbox": "Najnoviji postovi će biti dostavljeni u tvoj inbox",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Noviji Postovi",
-    "<a href='{url}'>Više postova</a> od {name}": "<a href='{url}'>Više postova</a> od {name}",
+    "Message:": "Message:",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Više postova</a> od {name}",
     "No posts": "Nema postova",
     " (Page %)": " (Stranica %)",
     "Read More": "Pročitaj Više",
     "Read <a href='{url}'>more posts</a> by this author": "Pročitaj <a href='{url}'>više postova</a> od ovog autora",
+    "Ref:": "Ref:",
     "See all % posts": "Vidi sve % postove",
     "Share this": "Podijeli ovo",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Ostani u toku! Neka svi najnoviji i najbolji postovi budu dostavljeni izravno u tvoj inbox",
