--- a/locales/nb.json
+++ b/locales/nb.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Abbonert!",
     "with the email address": "med epostadressen",
     "Your email address": "Din epostadresse",
-    "You've successfully subscribed to": "Du er abbonért på",
+    "You’ve successfully subscribed to": "Du er abbonért på",
     "A collection of posts": "En samling innlegg",
     "A collection of 1 post": "En samling av 1 innlegg",
     "A collection of % posts": "En samling % innlegg",
     "Get the latest posts delivered right to your inbox": "Få siste innlegg levert rett til din innboks",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Siste innlegg",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Flere innlegg</a> av {name}",
     "No posts": "Ingen innlegg",
     " (Page %)": " (Side %)",
     "Read More": "Les mer",
     "Read <a href='{url}'>more posts</a> by this author": "Les <a href='{url}'>flere innlegg</a> av denne forfatteren",
+    "Ref:": "Ref:",
     "See all % posts": "Vis alle % innlegg",
     "Share this": "Del dette",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Hold deg oppdatert! Få de siste og beste innlegg levert rett til din innboks",
