--- a/locales/pl.json
+++ b/locales/pl.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Zasubskrybowano!",
     "with the email address": "z adresem email",
     "Your email address": "Twój adres email",
-    "You've successfully subscribed to": "Pomyślnie zasubskrybowano",
+    "You’ve successfully subscribed to": "Pomyślnie zasubskrybowano",
     "A collection of posts": "Kolekcja wpisów",
     "A collection of 1 post": "Kolekcja 1 wpisu",
     "A collection of % posts": "Kolekcja % wpisów",
     "Get the latest posts delivered right to your inbox": "Otrzymuj najnowsze wpisy na skrzynkę pocztową",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Najnowsze wpisy",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Więcej wpisów</a> {name}",
     "No posts": "Brak wpisów",
     " (Page %)": " (Strona %)",
     "Read More": "Czytaj dalej",
     "Read <a href='{url}'>more posts</a> by this author": "Zobacz <a href='{url}'>więcej wpisów</a> tego autora",
+    "Ref:": "Ref:",
     "See all % posts": "Zobacz wszystkie % wpisów",
     "Share this": "Udostępnij",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Bądź na bieżąco! Otrzymuj najnowsze i najlepsze wpisy prosto na Twoją skrzynkę pocztową",
