--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Inscrição realizada!",
     "with the email address": "com seu e-mail",
     "Your email address": "Seu e-mail",
-    "You've successfully subscribed to": "Inscrição realizada com sucesso no",
+    "You’ve successfully subscribed to": "Inscrição realizada com sucesso no",
     "A collection of posts": "Uma coleção de artigos",
     "A collection of 1 post": "Uma coleção de 1 artigo",
     "A collection of % posts": "Uma coleção de % artigos",
     "Get the latest posts delivered right to your inbox": "Receba os últimos artigos diretamente em sua caixa de entrada.",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Últimos artigos",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Mais artigos</a> de {name}",
     "No posts": "Não existem artigos",
     " (Page %)": " (Página %)",
     "Read More": "Leia mais",
     "Read <a href='{url}'>more posts</a> by this author": "Leia <a href='{url}'>mais artigos</a> deste autor",
+    "Ref:": "Ref:",
     "See all % posts": "Ver todos os % artigos",
     "Share this": "Compartilhar",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Atualize-se! Receba as últimas novidades e artigos diretamente em sua caixa de entrada.",
