--- a/locales/ro.json
+++ b/locales/ro.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Te-ai înscris!",
     "with the email address": "cu adresa de email",
     "Your email address": "Adresa ta de email",
-    "You've successfully subscribed to": "Te-ai înscris cu succes la",
+    "You’ve successfully subscribed to": "Te-ai înscris cu succes la",
     "A collection of posts": "O colecție de articole",
     "A collection of 1 post": "O colecție de un articol",
     "A collection of % posts": "O colecție de % articole",
     "Get the latest posts delivered right to your inbox": "Citește ultimele articole livrate direct în inbox-ul tău",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Ultimele Articole",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Mai multe articole</a> de {name}",
     "No posts": "Nu există articole",
     " (Page %)": " (Pagina %)",
     "Read More": "Citește mai mult",
     "Read <a href='{url}'>more posts</a> by this author": "Citește <a href='{url}'>mai multe articole</a> de acest autor",
+    "Ref:": "Ref:",
     "See all % posts": "Vezi toate % articolele",
     "Share this": "Partajează asta",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Rămâi conectat! Citește ultimele și cele mai interesante articole livrate direct în inbox-ul tău",
