--- a/locales/ru.json
+++ b/locales/ru.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Вы подписаны!",
     "with the email address": "для",
     "Your email address": "Ваш email-адрес",
-    "You've successfully subscribed to": "Вы успешно подписались на",
+    "You’ve successfully subscribed to": "Вы успешно подписались на",
     "A collection of posts": "Коллекция статей",
     "A collection of 1 post": "Коллекция из 1 статьи",
     "A collection of % posts": "Коллекция из % статей",
     "Get the latest posts delivered right to your inbox": "Получайте свежие статьи прямо на свою почту",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Последние статьи",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Другие статьи</a> от {name}",
     "No posts": "Статьи отсутствуют",
     " (Page %)": " (Страница %)",
     "Read More": "Другие статьи этого автора",
     "Read <a href='{url}'>more posts</a> by this author": "<a href='{url}'>Другие статьи</a> этого автора",
+    "Ref:": "Ref:",
     "See all % posts": "Посмотреть все % статьи(-ей)",
     "Share this": "Поделиться статьёй",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Будьте в курсе! Получайте свежие статьи прямо на свою почту",
