--- a/locales/sv.json
+++ b/locales/sv.json
@@ -8,17 +8,20 @@
     "Subscribed!": "Prenumererad!",
     "with the email address": "med e-postadress",
     "Your email address": "Din e-postadress",
-    "You've successfully subscribed to": "Du har lyckats prenumerera på",
+    "You’ve successfully subscribed to": "Du har lyckats prenumerera på",
     "A collection of posts": "En samling artiklar",
     "A collection of 1 post": "En samling av 1 artikel",
     "A collection of % posts": "En samling av % artiklar",
     "Get the latest posts delivered right to your inbox": "Få de senaste artiklarna levererade direkt till din inkorg",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "Senaste artiklarna",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Fler artiklar</a> av {name}",
     "No posts": "Inga artiklar",
     " (Page %)": " (Sida %)",
     "Read More": "Läs mer",
     "Read <a href='{url}'>more posts</a> by this author": "Läs <a href='{url}'>mer artiklar</a> av denna författare",
+    "Ref:": "Ref:",
     "See all % posts": "Se alla % artiklar",
     "Share this": "Dela detta",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Håll dig uppdaterad! Få alla de senaste och bästa artiklarna levererade direkt till din inkorg.",
