--- a/locales/zh.json
+++ b/locales/zh.json
@@ -8,17 +8,20 @@
     "Subscribed!": "已经订阅！",
     "with the email address": "在此邮箱",
     "Your email address": "你的email地址",
-    "You've successfully subscribed to": "你已经成功订阅了",
+    "You’ve successfully subscribed to": "你已经成功订阅了",
     "A collection of posts": "文章集合",
     "A collection of 1 post": "共1篇文章",
     "A collection of % posts": "共%篇文章",
     "Get the latest posts delivered right to your inbox": "最新文章直达邮箱",
+    "Go to the front page": "Go to the front page",
     "Latest Posts": "最新文章",
+    "Message:": "Message:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
     "No posts": "没有文章",
     " (Page %)": " (第%页)",
     "Read More": "阅读更多",
     "Read <a href='{url}'>more posts</a> by this author": "阅读此作者的<a href='{url}'>更多文章</a>",
+    "Ref:": "Ref:",
     "See all % posts": "查看所有%篇文章",
     "Share this": "分享",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "保持更新！所有最新最好的文章全部送进你的邮箱",
