--- a/locales/hr.json
+++ b/locales/hr.json
@@ -13,9 +13,9 @@
     "A collection of 1 post": "Kolekcija s jednim postom",
     "A collection of % posts": "Kolekcija sa % postova",
     "Get the latest posts delivered right to your inbox": "Najnoviji postovi će biti dostavljeni u tvoj inbox",
-    "Go to the front page": "Go to the front page",
+    "Go to the front page": "Idi na glavnu stranicu",
     "Latest Posts": "Noviji Postovi",
-    "Message:": "Message:",
+    "Message:": "Poruka:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Više postova</a> od {name}",
     "No posts": "Nema postova",
     " (Page %)": " (Stranica %)",
