--- a/locales/de.json
+++ b/locales/de.json
@@ -14,7 +14,7 @@
     "A collection of % posts": "Eine Sammlung von % Artikeln",
     "Get the latest posts delivered right to your inbox": "Erhalte die neusten Artikel direkt in dein Postfach",
     "Go to the front page": "Gehe zur Startseite",
-    "Latest Posts": "Neuste Artikel",
+    "Latest Posts": "Neueste Artikel",
     "Message:": "Fehlermeldung:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Weitere Artikel</a> von {name}",
     "No posts": "Keine Artikel",
