Fixed russian translation

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -13,9 +13,9 @@
     "A collection of 1 post": "Коллекция из 1 статьи",
     "A collection of % posts": "Коллекция из % статей",
     "Get the latest posts delivered right to your inbox": "Получайте свежие статьи прямо на свою почту",
-    "Go to the front page": "Go to the front page",
+    "Go to the front page": "Перейти на первую страницу",
     "Latest Posts": "Последние статьи",
-    "Message:": "Message:",
+    "Message:": "Сообщение:",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Другие статьи</a> от {name}",
     "No posts": "Статьи отсутствуют",
     " (Page %)": " (Страница %)",
