--- a/locales/fr.json
+++ b/locales/fr.json
@@ -5,30 +5,30 @@
     "Page {page} of {pages}": "Page {page} sur {pages}",
     "Subscribe": "S’abonner",
     "Subscribe to {blogtitle}": "S’abonner à {blogtitle}",
-    "Subscribed!": "Abonné !",
-    "with the email address": "avec l’adresse e-mail",
-    "Your email address": "Votre adresse e-mail",
-    "You’ve successfully subscribed to": "Vous vous êtes abonné avec succès à",
+    "Subscribed!": "Abonné/e !",
+    "with the email address": "avec l’adresse email",
+    "Your email address": "Votre adresse email",
+    "You’ve successfully subscribed to": "Vous êtes maintenant abonné/e à",
     "A collection of posts": "Une catégorie d’articles",
     "A collection of 1 post": "Une catégorie avec un article",
     "A collection of % posts": "Une catégorie avec % articles",
-    "Get the latest posts delivered right to your inbox": "Recevez les derniers articles directement dans votre boîte aux lettres.",
-    "Go to the front page": "Aller sur la page d’accueil",
+    "Get the latest posts delivered right to your inbox": "Recevez les derniers articles directement dans votre boîte emails.",
+    "Go to the front page": "Aller à la page d’accueil",
     "Latest Posts": "Derniers articles",
     "Message:": "Message :",
     "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Plus d’articles</a> par {name}",
     "No posts": "Aucun article",
     " (Page %)": " (Page %)",
-    "Read More": "En savoir plus",
+    "Read More": "Lire la suite",
     "Read <a href='{url}'>more posts</a> by this author": "Lire <a href='{url}'>plus d’articles</a> de cet auteur",
     "Ref:": "Réf. :",
     "See all % posts": "Voir les % articles",
     "Share this": "Partager",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte aux lettres.",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte emails.",
     "This post was a collaboration between": "Cet article est une collaboration entre",
-    "youremail@example.com": "votreemail@exemple.fr",
+    "youremail@example.com": "votre.email@exemple.fr",
     "1 post": "Un article",
     "% posts": "% articles",
-    "1 min read": "1 min de lecture",
-    "% min read": "% min de lecture"
+    "1 min read": "1 min. de lecture",
+    "% min read": "% min. de lecture"
 }
